(lang dune 3.16)

(name microcamel_web)

(generate_opam_files true)

(source
 (github dawidpawliczek4/microcamel_web))

(authors "Dawid Pawliczek")

(maintainers "Dawid Pawliczek")

(license MIT)

; (documentation)

(package
 (name microcamel_web)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
